Upgraded Java from 17 to 21, upgraded Spring Security from 5.8.3 to 6.0.8, and applied OpenRewrite recipes for code migration